# otus-allocator-cust

./: .travis.yml  CMakeLists.txt  CustomAllocator.h  main.cpp  slist.h
